--- a/components/g0dkh9v5v-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/g0dkh9v5v-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: g0dkh9v5v-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-e4660e0a97.62h6.p3.openshiftapps.com/rhtap/rhtap-qe:4f87d59c3f6419c40c6ea5f9f6dc919f1e6b1052@sha256:279b6c99850fd4ab5ded46eaffee90b5fbfea67bebf96cec8245bdf27622f527
+          name: container-image
